# j2s

./: BEST_PRACTICES.md  Cargo.toml  QUICK_START.md  README.md  TUTORIAL.md  USE_CASES.md
src/: cli.rs  error.rs  file_ops.rs  lib.rs  main.rs  performance.rs  schema_generator.rs
src/codegen/: comments.rs  factory.rs  generator.rs  mod.rs  types.rs  utils.rs
src/codegen/languages/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
tests/: cli_integration.rs  comment_generation_tests.rs  deep_nesting_integration.rs  error_handling_integration.rs  field_comment_integration_tests.rs  mixed_type_arrays_test.rs  performance_integration.rs
tests/data/: api_response.json  arrays.json  deep_nesting.json  edge_cases.json  large_dataset.json  mixed_types.json  nested.json  simple.json
