[package]
name = "json2schema"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for generating JSON Schema files from JSON input files"
authors = ["JSON to Schema Tool"]
license = "MIT"
repository = "https://github.com/example/json2schema"
keywords = ["json", "schema", "cli", "validation", "generator"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "j2s"
path = "src/main.rs"

[lib]
name = "json2schema"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
